# renef

./: .gitignore  CMakeLists.txt  CNAME  Gemfile  Makefile  README.md  _config.yml  build.sh  build_wsl.bat  doc.md  index.md
.github/: FUNDING.yml
.github/workflows/: release.yml
_sass/custom/: custom.scss
bindings/python/examples/: basic.py
bindings/python/renef/: __init__.py  core.py
docs/: architecture.md  behind-the-project.md  contributing.md  credits.md  getting-started.md  installation.md  introduction.md  license.md  plugins.md  python-binding.md  scripting-guide.md  troubleshooting.md
docs/api/: console.md  file.md  hook.md  index.md  memory.md  module.md  thread.md
docs/commands/: application.md  hooks.md  index.md  memory.md  monitoring.md  process.md  script.md  utility.md
docs/examples/: crypto-logger.md  ctf-derelabs.md  index.md  memory-search.md  root-bypass.md  ssl-bypass.md  tracer.md
scripts/: test_java_api.lua
scripts/examples/: java_hook.lua  ssl_unpin.lua  strace_custom.lua  strace_file.lua  strace_network.lua
src/agent/: CMakeLists.txt  agent.c
src/agent/core/: agent.c  globals.c  globals.h
src/agent/handlers/: builtin.c  cmd_builtin.c  cmd_eval.c  cmd_inspect.c  cmd_memdump.c  cmd_memscan.c  handlers.h  inspect.c
src/agent/hook/: hook.c  hook.h  hook_java.c  hook_java.h  java.c  native.c
src/agent/include/agent/: agent.h  bridge_dex.h  globals.h  hook.h  hook_java.h  lua_hook.h  lua_java.h  lua_strace.h  lua_thread.h  strace.h
src/agent/lua/: api_file.c  api_hook.c  api_java.c  api_jni.c  api_strace.c  api_thread.c  engine.c
src/agent/lua/engine/: lua_engine.c  lua_engine.h
src/agent/lua/hook/: lua_hook.c  lua_hook.h
src/agent/lua/memory/: lua_memory.c  lua_memory.h
src/agent/lua/thread/: lua_thread.c  lua_thread.h
src/agent/proc/: proc.c  proc.h
src/agent/strace/: strace.c
src/binr/renef/: main.cpp
src/binr/renef-strace/: main.cpp
src/binr/renef/tui/: command_adapter.cpp  command_adapter.h  tui_app.cpp  tui_app.h  tui_state.cpp  tui_state.h  tui_status_bar.cpp  tui_status_bar.h
src/binr/renef/tui/tabs/: console_tab.cpp  console_tab.h  hooks_tab.cpp  hooks_tab.h  logs_tab.cpp  logs_tab.h  memory_tab.cpp  memory_tab.h  modules_tab.cpp  modules_tab.h
src/cli/: renef.cpp
src/cli/tui/: memscan_tui.cpp  memscan_tui.h
src/core/: cmd.cpp  cmd.h  msg.hpp
src/core/cmds/attach/: attach.cpp  attach.h
src/core/cmds/eval/: eval.cpp  eval.h
src/core/cmds/hookgen/: hookgen.cpp  hookgen.h
src/core/cmds/hooks/: hooks.cpp  hooks.h
src/core/cmds/inspect/: README.md  ib.cpp  ib.h
src/core/cmds/list/: la.cpp  la.h
src/core/cmds/load/: load.cpp  load.h
src/core/cmds/memdump/: memdump.cpp  memdump.h
src/core/cmds/memscan/: memscan.cpp  memscan.h
src/core/cmds/ping/: ping.cpp  ping.h
src/core/cmds/sec/: sec.cpp  sec.h
src/core/cmds/spawn/: spawn.cpp  spawn.h
src/core/cmds/watch/: watch.cpp  watch.h
src/core/transport/: tcp_transport.cpp  tcp_transport.h  transport.h  transport_server.cpp  transport_server.h  uds_transport.cpp  uds_transport.h
src/core/util/: colors.h
src/core/util/crypto/: crypto.cpp  crypto.h
src/core/util/socket/: socket_helper.cpp  socket_helper.h
src/core/util/string/: string_utils.cpp  string_utils.h
src/inject/: injector.cpp  shellcode.h
src/injector/: injector.cpp
src/injector/shellcode/: shellcode.h
src/librenef/binding/: renef.cpp  renef.h
src/librenef/cmd/: cmd.cpp  cmd_attach.cpp  cmd_eval.cpp  cmd_hookgen.cpp  cmd_hooks.cpp  cmd_list.cpp  cmd_load.cpp  cmd_memdump.cpp  cmd_spawn.cpp  cmd_strace.cpp  cmd_watch.cpp
src/librenef/include/renef/: server_connection.h  socket_helper.h
src/librenef/transport/: server.cpp  tcp.cpp  uds.cpp
src/librenef/util/: server_connection.cpp  socket.cpp
src/server/: renef_server.cpp
